--- a/nginx-app.conf
+++ b/nginx-app.conf
@@ -1,6 +1,6 @@
 upstream backend {
     # server 127.0.0.1:8000;
-    server unix:///Users/hugo/Projects/AppStarter/backend/backend.sock;
+    server unix:/home/docker/code/app.sock;
 }
 
 upstream frontend {
@@ -14,7 +14,7 @@ server {
     # backend
     location /api {
         uwsgi_pass backend;
-        include /Users/hugo/Projects/AppStarter/backend/uwsgi_params;
+        include /home/docker/code/uwsgi_params;
         client_max_body_size 20m;
 	      proxy_read_timeout 600s;
         proxy_connect_timeout 75s;
@@ -24,7 +24,7 @@ server {
     # django admin
     location /admin {
         uwsgi_pass backend;
-        include /Users/hugo/Projects/AppStarter/backend/uwsgi_params;
+        include /home/docker/code/uwsgi_params;
         client_max_body_size 20m;
         proxy_read_timeout 600s;
         proxy_connect_timeout 75s;
@@ -34,7 +34,7 @@ server {
     # STATIC FILES
     location /api-static {
         add_header 'Access-Control-Allow-Origin' '*';
-        alias /Users/hugo/Projects/AppStarter/backend/static;
+        alias /home/docker/code/static;
         open_file_cache max=1000;
         access_log off;
         if ($request_uri ~* "\.(ico|css|less|js|gif|jpe?g|png|swf|zip)\?[0-9]+$") {
