Added groups endpoint

--- a/nginx-app.conf
+++ b/nginx-app.conf
@@ -8,7 +8,7 @@ upstream frontend {
 }
 
 server {
-    listen 80;
+    listen 8000;  # dockerfile exposes this port
     server_name app-starter.com;
 
     # backend
